--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,16 @@
   0 100px 80px rgba(0, 0, 0, 0.12)
 ;
 }
+
+nav {
+  position: relative;
+}
+
+#navbarMenu {
+  position: absolute;
+  width: 50%;
+right: 0px;
+}
 .rounded-sm {
   border: 1px 1px #282c34;
   border-radius: 2em;
