--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
+/* COLORS */
+
+.lightCream {
+  color: #fef9f4;
+}
+
+.lightGray {
+  color: #cfd7d6;
+}
+
+.mintCream {
+  color: #eff5f2;
+}
+.blanchedAlmond {
+  color: #feebcd;
+}
+.blueSapphire {
+  color: #2a5f6f;
+}
+.honeyYellow {
+  color: #ffb531;
+}
+.bg-lightCream {
+  background-color: #fef9f4;
+}
+
+.bg-lightGray {
+  background-color: #cfd7d6;
+}
+
+.bg-mintCream {
+  background-color: #eff5f2;
+}
+.bg-blanchedAlmond {
+  background-color: #feebcd;
+}
+.bg-blueSapphire {
+  background-color: #2a5f6f;
+}
+.bg-honeyYellow {
+  background-color: #ffb531;
+}
+
 body {
+  background-color: #fef9f4;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
